Fix logo sizing on mobile

--- a/cs_CZ/assets/stylesheets/application.css
+++ b/cs_CZ/assets/stylesheets/application.css
@@ -9835,6 +9835,7 @@ article {
 
 .logo {
   max-height: 120px;
+  object-fit: contain !important;
   width: auto !important; }
 
 .flex {
